concord_macros/tests/dsl/fail/fail_fake_builtin_pagination_path.stderr
error: custom pagination controllers use `paginate TypePath` without a configuration block
  --> tests/dsl/fail/fail_fake_builtin_pagination_path.rs:19:14
   |
19 |     paginate fake::OffsetLimitPagination {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_fake_builtin_pagination_path.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
